--- a/exercises/09_DE_Visualization.Rmd
+++ b/exercises/09_DE_Visualization.Rmd
@@ -93,103 +93,7 @@ down_limma_DEG <- topTags_limma %>%
 up_DEG_results_list <- list(up_edgeR_DEG,
                         up_DESeq2_DEG,
                         up_limma_DEG)
-
-# visualize the GO results list as a venn diagram
-ggVennDiagram(up_DEG_results_list,
-              category.names = c("edgeR", "DESeq2", "limma")) +
-  scale_x_continuous(expand = expansion(mult = .2)) +
-  scale_fill_distiller(palette = "RdBu"
-  ) +
-  ggtitle("Upregulated genes in contrast: \n(EtOH.MSN2/4dd - MOCK.MSN2/4dd) - (EtOH.WT - MOCK.WT)")
-
-
-# Now let's do the same for downregulated genes:
-down_DEG_results_list <- list(down_edgeR_DEG,
-                        down_DESeq2_DEG,
-                        down_limma_DEG)
-
-ggVennDiagram(down_DEG_results_list,
-              category.names = c("edgeR", "DESeq2", "limma")) +
-  scale_x_continuous(expand = expansion(mult = .2)) +
-  scale_fill_distiller(palette = "RdBu"
-  ) +
-  ggtitle("Downregulated genes in contrast: \n(EtOH.MSN2/4dd - MOCK.MSN2/4dd) - (EtOH.WT - MOCK.WT)")
 ```
-
-# Correlation between logFC estimates
-```{r compare-estimates}
-# Custom labels for facet headers
-custom_labels <- c("purple" = "Sig in Both",
-                   "red" = "Only in edgeR",
-                   "blue" = "Only in DESeq2",
-                   "black" = "Not Sig",
-                   "grey" = "NA encountered")
-
-
-# compare edgeR & DESeq2
-full_join(topTags_edgeR, topTags_DESeq2,
-          by = join_by(ORF, SGD, GENENAME)) %>%
-  mutate(edgeR_sig = ifelse(FDR < sig_cutoff, "red", "black")) %>%
-  mutate(DESeq2_sig = ifelse(padj < sig_cutoff, "blue", "black")) %>% 
-  mutate(sig = factor(case_when(
-    edgeR_sig == "red" & DESeq2_sig == "blue" ~ "purple",
-    edgeR_sig == "red" & DESeq2_sig != "blue" ~ "red",
-    edgeR_sig != "red" & DESeq2_sig == "blue" ~ "blue",
-    edgeR_sig != "red" & DESeq2_sig != "blue" ~ "black",
-    TRUE ~ "grey"  # if none of these are met
-  ), levels = c("purple", "red", "blue", "black", "grey"), labels = c("Sig in Both", "Only in edgeR", "Only in DESeq2", "Not Sig", "NA encountered"))) %>%
-  ggplot(aes(x=logFC, y=log2FoldChange, color = sig, size=logCPM)) +
-  geom_abline(slope = 1,) +
-  geom_point(alpha=0.5) +
-  scale_color_manual(values=c("purple", "red", "blue", "black", "grey")) + # use colors given
-  theme_bw() +
-  facet_wrap(~sig, labeller = labeller(new_column = custom_labels)) +
-  ggtitle("Comparing genewise logFC estimates between edgeR and DESeq2")
-
-# compare edgeR & limma
-full_join(topTags_edgeR, topTags_limma,
-          by = join_by(ORF, SGD, GENENAME)) %>%
-  mutate(edgeR_sig = ifelse(FDR < sig_cutoff, "red", "black")) %>%
-  mutate(limma_sig = ifelse(adj.P.Val < sig_cutoff, "green", "black")) %>% 
-  mutate(sig = factor(case_when(
-    edgeR_sig == "red" & limma_sig == "green" ~ "brown",
-    edgeR_sig == "red" & limma_sig != "green" ~ "red",
-    edgeR_sig != "red" & limma_sig == "green" ~ "green",
-    edgeR_sig != "red" & limma_sig != "green" ~ "black",
-    TRUE ~ "grey"  # if none of these are met
-  ), levels = c("brown", "red", "green", "black", "grey"), labels = c("Sig in Both", "Only in edgeR", "Only in limma", "Not Sig", "NA encountered"))) %>%
-  ggplot(aes(x=logFC.x, y=logFC.y, color = sig, size=logCPM)) +
-  geom_abline(slope = 1,) +
-  geom_point(alpha=0.5) +
-  scale_color_manual(values=c("brown", "red", "green", "black", "grey")) + # use colors given
-  theme_bw() +
-  facet_wrap(~sig, labeller = labeller(new_column = custom_labels)) +
-  ggtitle("Comparing genewise logFC estimates between edgeR and limma") +
-  labs(x="logFC estimate: edgeR", y="logFC estimate: limma")
-
-# compare DESeq2 & limma
-full_join(topTags_DESeq2, topTags_limma,
-          by = join_by(ORF, SGD, GENENAME)) %>%
-  mutate(DESeq2_sig = ifelse(padj < sig_cutoff, "blue", "black")) %>%
-  mutate(limma_sig = ifelse(adj.P.Val < sig_cutoff, "green", "black")) %>% 
-  mutate(sig = factor(case_when(
-    DESeq2_sig == "blue" & limma_sig == "green" ~ "aquamarine3",
-    DESeq2_sig == "blue" & limma_sig != "green" ~ "blue",
-    DESeq2_sig != "blue" & limma_sig == "green" ~ "green",
-    DESeq2_sig != "blue" & limma_sig != "green" ~ "black",
-    TRUE ~ "grey"  # if none of these are met
-  ), levels = c("aquamarine3", "blue", "green", "black", "grey"), labels = c("Sig in Both", "Only in DESeq2", "Only in limma", "Not Sig", "NA encountered"))) %>%
-  ggplot(aes(x=log2FoldChange, y=logFC, color = sig, size=AveExpr)) +
-  geom_abline(slope = 1,) +
-  geom_point(alpha=0.5) +
-  scale_color_manual(values=c("aquamarine3", "blue", "green", "black", "grey")) + # use colors given
-  theme_bw() +
-  facet_wrap(~sig, labeller = labeller(new_column = custom_labels, drop=FALSE)) +
-  ggtitle("Comparing genewise logFC estimates between DESeq2 and limma") +
-  labs(x="logFC estimate: DESeq2", y="logFC estimate: limma")
-
-```
-
 
 # MA-plot
 
@@ -197,10 +101,10 @@ MA plots display a log ratio (M) vs an average (A) in order to visualize the dif
 
 ```{r plot-MA, out.width="33.3%"}
 topTags_edgeR %>%
-  ggplot(aes(logCPM, log2FC, colour=FDR)) + 
+  ggplot(., aes(x=logCPM, y=logFC, colour=FDR)) + 
     geom_point(size=1) + 
     scale_y_continuous(limits=c(-5, 5), oob=squish) + 
-    scale_x_log10() + 
+    # scale_x_log10() + 
     geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
     labs(x="mean of normalized counts", y="log fold change") + 
     scale_colour_viridis(direction=-1, trans='sqrt') + 
@@ -213,9 +117,10 @@ topTags_DESeq2 %>%
   ggplot(aes(baseMean, log2FoldChange, colour=padj)) + 
     geom_point(size=1) + 
     scale_y_continuous(limits=c(-5, 5), oob=squish) + 
+    # DESeq2 doesn't give log scale counts, so we manually can do that now.
     scale_x_log10() + 
     geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
-    labs(x="mean of normalized counts", y="log fold change") + 
+    labs(x="log10(mean of normalized counts)", y="log fold change") + 
     scale_colour_viridis(direction=-1, trans='sqrt') + 
     theme_bw() + 
     geom_density_2d(colour="grey", size=1) + 
@@ -226,24 +131,68 @@ topTags_limma %>%
   ggplot(aes(AveExpr, logFC, colour=adj.P.Val)) + 
     geom_point(size=1) + 
     scale_y_continuous(limits=c(-5, 5), oob=squish) + 
+    # scale_x_log10() + 
+    geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
+    labs(x="mean of normalized counts", y="log fold change") + 
+    scale_colour_viridis(direction=-1, trans='sqrt') + 
+    theme_bw() + 
+    geom_density_2d(colour="grey", size=1) + 
+    ggtitle("limma MA plot")
+```
+
+
+```{r plot-volcano, out.width="33.3%"}
+topTags_edgeR %>%
+  ggplot(.,aes(x=logFC,-log10(FDR))) + 
+    geom_point(size=1) + 
+    # scale_y_continuous(limits=c(-5, 5), oob=squish) + 
+    # scale_x_log10() + 
+    # geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
+    labs(x="log fold change", y="-log10(adjusted p-value)") + 
+    # scale_colour_viridis(direction=-1, trans='sqrt') + 
+    theme_bw() + 
+    # geom_density_2d(colour="grey", size=1) + 
+    ggtitle("edgeR MA plot")
+
+
+topTags_DESeq2 %>%
+  ggplot(aes(log2FoldChange,-log10(padj))) + 
+    geom_point(size=1) + 
+    scale_y_continuous(limits=c(-5, 5), oob=squish) + 
     scale_x_log10() + 
     geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
     labs(x="mean of normalized counts", y="log fold change") + 
     scale_colour_viridis(direction=-1, trans='sqrt') + 
     theme_bw() + 
     geom_density_2d(colour="grey", size=1) + 
-    ggtitle("edgeR MA plot")
+    ggtitle("DESeq2 MA plot")
+
+
+topTags_limma %>%
+  ggplot(aes(AveExpr, logFC, -log10(adj.P.Val))) + 
+    geom_point(size=1) + 
+    scale_y_continuous(limits=c(-5, 5), oob=squish) + 
+    scale_x_log10() + 
+    geom_hline(yintercept = 0, colour="darkorchid4", linewidth=1, linetype="longdash") +
+    labs(x="mean of normalized counts", y="log fold change") + 
+    scale_colour_viridis(direction=-1, trans='sqrt') + 
+    theme_bw() + 
+    geom_density_2d(colour="grey", size=1) + 
+    ggtitle("limma MA plot")
 ```
 
 
 # Using Glimma for an interactive visualization
+
+## MA plots
+
 ```{r}
 # load in res objects for both limma and edgeR
 res_limma <- readRDS("~/Desktop/Genomic_Data_Analysis/Analysis/limma/yeast_res_limma.Rds")
 res_edgeR <- readRDS("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR/yeast_res_edgeR.Rds")
 
 # load in the DGE lists for each
-y_limma <- readRDS("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR/yeast_res_edgeR.Rds")
+y_limma <- readRDS("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR/yeast_res_limma.Rds")
 
 y_edgeR <- readRDS("~/Desktop/Genomic_Data_Analysis/Analysis/edgeR/yeast_res_edgeR.Rds")
   
@@ -254,12 +203,46 @@ glimmaMA(res_edgeR, dge = y_edgeR)
 ```
 
 
-# Volcano Plots
+## Volcano Plots
 
 
 ```{r}
-
 glimmaVolcano(res_limma)
 glimmaVolcano(res_edgeR)
+```
+
+
+# Generating bargraph summaries
+
+This really compresses relevant information, so it's generally not a good way to visualize DE data. However, it is done, so if it is useful for your experiment, here is how you could do it.
+```{r}
+# let's use the res_all object from the 08_DE_limma exercise:
+res_all %>%
+  decideTests(p.value = 0.05, lfc = 0) %>%
+  as.data.frame() %>%
+  rownames_to_column("gene") %>%
+  pivot_longer(-gene, names_to = "contrast", values_to = "DE_direction") %>%
+  group_by(contrast) %>%
+  summarise(
+    upregulated = sum(DE_direction == 1),
+    downregulated = sum(DE_direction == -1)
+  ) %>%
+  pivot_longer(-contrast, names_to = "DE_direction", values_to = "n_genes") %>%
+  ggplot(aes(x = contrast, y = n_genes, fill = DE_direction)) +
+  geom_col(position = "dodge") +
+  theme_bw() +
+  coord_flip() +
+  geom_text(aes(label = n_genes),
+            position = position_dodge(width = .9),
+            hjust = "inward") +
+  labs(y="Number of DE genes") +
+  ggtitle("Summary of DE genes by contrast")
+```
+
+If we want to show the same amount of information, in a more informative way, a venn diagram is often a better alternative. Here's an easy way to get that visualization if you use either edgeR or limma for your analysis.
+
+```{r}
+# same as before, we can make the plot from the decideTests output
+
 ```
 
