--- a/exercises/09_DE_Visualization.Rmd
+++ b/exercises/09_DE_Visualization.Rmd
@@ -102,6 +102,7 @@ up_DEG_results_list <- list(up_edgeR_DEG,
 MA plots display a log ratio (M) vs an average (A) in order to visualize the differences between two groups. In general we would expect the expression of genes to remain consistent between conditions and so the MA plot should be similar to the shape of a trumpet with most points residing on a y intercept of 0. DESeq2 has a built in function for creating the MA plot that we have used before (`plotMA()`), but we can also make our own:
 
 ```{r plot-MA, out.width="33.3%"}
+#plot MA for edgeR using ggplot2
 topTags_edgeR %>%
   mutate(`Significant FDR` = case_when(
         FDR < sig_cutoff ~ "Yes",
@@ -118,7 +119,7 @@ topTags_edgeR %>%
     theme_bw() + 
     ggtitle("edgeR MA plot")
 
-
+#plot MA for DESeq2 using ggplot2
 topTags_DESeq2 %>%
   mutate(
     `Significant FDR` = case_when(padj < sig_cutoff ~ "Yes",
@@ -137,7 +138,7 @@ topTags_DESeq2 %>%
     theme_bw() +
     ggtitle("DESeq2 MA plot")
   
-
+#plot MA for limma using ggplot2
 topTags_limma %>%
   mutate(
     `Significant FDR` = case_when(adj.P.Val < sig_cutoff ~ "Yes",
@@ -156,7 +157,7 @@ topTags_limma %>%
     theme_bw() + 
     ggtitle("limma MA plot")
 ```
-
+# Volcano Plot
 
 ```{r plot-volcano, out.width="33.3%"}
 # change the dimensions of the output figure by clicking the gear icon in topright corner of the code chunk > "use custom figure size"
@@ -251,10 +252,10 @@ glimmaVolcano(res_edgeR)
 
 # Generating bargraph summaries
 
-This really compresses relevant information, so it's generally not a good way to visualize DE data. However, it is done, so if it is useful for your experiment, here is how you could do it.
+This visualization approach compresses relevant information, so it's generally a discouraged approach for visualizing DE data. However, it is done, so if it is useful for your study, here is how you could do it.
 ```{r}
 # let's use the res_all object from the 08_DE_limma exercise:
-res_all_limma <- 
+res_all_limma <- read_rds('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/analysis/yeast_res_allContrasts_limma.Rds')
 
 res_all %>%
   decideTests(p.value = 0.05, lfc = 0) %>%
